--- a/package.json
+++ b/package.json
@@ -5,10 +5,16 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "npm run build && cp node_modules/browser-request/index.js dist/js/request.js && PORT=9988 API_HOST=http://localhost:1234 DEBUG=* node app.js"
   },
   "dependencies": {
+    "bluebird": "^3.5.1",
+    "browser-request": "^0.3.3",
     "d3": "^4.13.0",
+    "debug": "^3.1.0",
+    "express": "^4.16.2",
+    "nconf": "^0.10.0",
     "vue": "^2.5.13"
   },
   "devDependencies": {
