--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "npm run build && cp node_modules/browser-request/index.js dist/js/request.js && PORT=9988 API_HOST=http://localhost:1234 DEBUG=* node app.js"
+    "start": "npm run build && PORT=9988 API_HOST=http://localhost:1234 DEBUG=* node app.js"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
