--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "local": "npm run build && PORT=9988 API_HOST=http://localhost:1234 DEBUG=* node app.js",
-    "start": "npm run build && API_HOST=http://localhost:1234 DEBUG=* node app.js"
+    "start": "npm run build && node app.js"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
