--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "domains": [
     "www.bachibouzouk.ca",
     "bachibouzouk.ca"
-   ],
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -19,13 +19,17 @@
     "d3": "^4.13.0",
     "debug": "^3.1.0",
     "express": "^4.16.2",
+    "lodash": "^4.17.10",
     "nconf": "^0.10.0",
     "vue": "^2.5.13"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
     "@vue/cli-plugin-babel": "^3.0.0-alpha.13",
     "@vue/cli-plugin-eslint": "^3.0.0-alpha.13",
     "@vue/cli-service": "^3.0.0-alpha.13",
+    "gulp-babel": "^8.0.0-beta.2",
     "vue-template-compiler": "^2.5.13"
   },
   "babel": {
