--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "builddev": "vue-cli-service build --mode development",
     "lint": "vue-cli-service lint",
-    "local": "npm run build && PORT=9988 API_HOST=http://localhost:1234 DEBUG=* node app.js",
+    "local": "npm run builddev && PORT=9988 API_HOST=http://localhost:1234 DEBUG=* node app.js",
     "start": "npm run build && node app.js"
   },
   "dependencies": {
